# opensono

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
opensono/: __init__.py  __main__.py  core.py
opensono/transcribers/: __init__.py  base.py  faster_whisper.py  parakeet.py
