[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensono"
version = "0.1.4"
description = "Open-source audio transcription with speaker diarization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenSono", email = "hello@opensono.ai" },
]
keywords = ["transcription", "whisper", "diarization", "speech-to-text", "nemo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faster-whisper",
    "nemo_toolkit[asr]",
    "soundfile",
    "librosa",
    "numpy",
]

[project.urls]
Homepage = "https://opensono.vercel.app"
Repository = "https://github.com/penkow/opensono"
Issues = "https://github.com/penkow/opensono/issues"

[project.scripts]
opensono = "opensono.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opensono*"]
