[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensono"
version = "0.2.1"
description = "Open-source audio transcription with speaker diarization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenSono", email = "hello@opensono.ai" },
]
keywords = ["transcription", "whisper", "diarization", "speech-to-text", "nemo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faster-whisper",
    "nemo_toolkit[asr]",
    "soundfile",
    "librosa",
    "numpy",
]

[project.optional-dependencies]
# GPU install (default). On Linux, PyPI's torch wheel is CUDA-enabled.
#   uv pip install opensono           # equivalent to opensono[gpu]
#   uv pip install opensono[gpu]
gpu = ["torch>=2.0"]

# CPU-only install. With uv, this automatically resolves torch from the
# PyTorch CPU wheel index (see [tool.uv.sources] below):
#   uv pip install opensono[cpu]
#
# With plain pip, add the PyTorch CPU index manually:
#   pip install opensono[cpu] --extra-index-url https://download.pytorch.org/whl/cpu
cpu = ["torch>=2.0"]

# uv-specific routing: when the [cpu] extra is selected, pull torch from
# the PyTorch CPU wheel index instead of PyPI. Plain pip ignores this section.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
]

[project.urls]
Homepage = "https://opensono.vercel.app"
Repository = "https://github.com/penkow/opensono"
Issues = "https://github.com/penkow/opensono/issues"

[project.scripts]
opensono = "opensono.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opensono*"]
